Updated quick documentation

--- a/notebooks/Askdata - Quickstart.ipynb
+++ b/notebooks/Askdata - Quickstart.ipynb
@@ -33,7 +33,7 @@
       },
       "source": [
         "#Let's install Askdata\n",
-        "!pip install askdata --upgrade\n"
+        "!pip install askdata\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -47,7 +47,7 @@
       },
       "source": [
         "#Import of the library\n",
-        "from askdata.askdata_client import Askdata, Agent\n",
+        "from askdata import Askdata, Agent\n",
         "import pandas as pd\n"
       ],
       "execution_count": 0,
@@ -74,7 +74,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Askdata Username: s.disomma@askdata.com\n",
+            "Askdata Username: your-name@mail.com\n",
             "Askdata Password: ··········\n"
           ],
           "name": "stdout"
@@ -93,14 +93,8 @@
         }
       },
       "source": [
-        "# Load the list of the agents connected to your account as a pandas dataframe\n",
-        "get_agents_df = askdata.agents_dataframe()\n",
-        "\n",
-        "#get one agent\n",
-        "agent = Agent(askdata, 'Sales Demo')\n",
-        "\n",
         "# Simple query\n",
-        "df = agent.ask('give me sales by countries')\n",
+        "df = askdata.ask('give me sales by countries', workspace='sales_demo')\n",
         "df\n"
       ],
       "execution_count": 0,
@@ -174,7 +168,7 @@
       },
       "source": [
         "#create one dataset on another agent starting from a dataframe\n",
-        "my_second_agent.save_to_dataset(frame=df, dataset_name='Web Sources')\n"
+        "askdata.save(df, dataset_name='My Sales', workspace='other_workspace_slug')\n"
       ],
       "execution_count": 0,
       "outputs": []
