Fixed query method

--- a/notebooks/Askdata - Quickstart.ipynb
+++ b/notebooks/Askdata - Quickstart.ipynb
@@ -94,7 +94,7 @@
       },
       "source": [
         "# Simple query\n",
-        "df = askdata.ask('give me sales by countries', workspace='sales_demo')\n",
+        "df = askdata.get('give me sales by countries', workspace='sales_demo')\n",
         "df\n"
       ],
       "execution_count": 0,
